--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Literata:wght@400;600&family=Space+Grotesk:wght@400;600&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Literata:wght@400;600&family=Orbitron:wght@400;600;700&family=Rajdhani:wght@500;600&family=Space+Grotesk:wght@400;600&display=swap"
       rel="stylesheet"
     />
     <title>Focus Reader</title>
