--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       href="https://fonts.googleapis.com/css2?family=Literata:wght@400;600&family=Orbitron:wght@400;600;700&family=Rajdhani:wght@500;600&family=Space+Grotesk:wght@400;600&display=swap"
       rel="stylesheet"
     />
-    <title>Focus Reader</title>
+    <title>Pacer</title>
   </head>
   <body>
     <div id="root"></div>
